--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   google_maps_flutter: ^2.5.0
   weather: ^3.1.1
   intl: ^0.18.1
+  latlong2: ^0.9.0
+  flutter_map: ^5.0.0
+  url_launcher: ^6.1.14
+  flutter_map_marker_cluster: ^1.2.0
+  flutter_polyline_points: ^2.0.0
+  location: ^5.0.3
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
